parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = [],
        peg$c1 = peg$FAILED,
        peg$c2 = function(elem) { return elem; },
        peg$c3 = function(elems) {
              return new BlockNode(elems);
            },
        peg$c4 = "if",
        peg$c5 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c6 = "then",
        peg$c7 = { type: "literal", value: "then", description: "\"then\"" },
        peg$c8 = "else",
        peg$c9 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c10 = function(cond, tbody, fbody) {
              return new IfElseNode(cond, tbody, fbody);
            },
        peg$c11 = function(cond, tbody) {
              return new IfElseNode(cond, tbody);
            },
        peg$c12 = "end",
        peg$c13 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c14 = "for",
        peg$c15 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c16 = "in",
        peg$c17 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c18 = "do",
        peg$c19 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c20 = function(sym, range, body) {
              return new ForInNode(sym, range, body);
            },
        peg$c21 = "while",
        peg$c22 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c23 = function(cond, body) {
              return new WhileNode(cond, body);
            },
        peg$c24 = "begin",
        peg$c25 = { type: "literal", value: "begin", description: "\"begin\"" },
        peg$c26 = function(sym, body) {
              return new BeginNode(sym, body);
            },
        peg$c27 = "let",
        peg$c28 = { type: "literal", value: "let", description: "\"let\"" },
        peg$c29 = null,
        peg$c30 = "=",
        peg$c31 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c32 = function(sym, dims, value) {
              if (!dims) {
                return new AssignNode(sym, value);
              } else {
                return buildIndex(new VariableNode(sym), dims, value);
              }
            },
        peg$c33 = "delete",
        peg$c34 = { type: "literal", value: "delete", description: "\"delete\"" },
        peg$c35 = function(sym, dims) {
              if (!dims) {
                return new DeleteNode(sym);
              } else {
                return buildIndex(new VariableNode(sym), dims, $remove);
              }
            },
        peg$c36 = "call",
        peg$c37 = { type: "literal", value: "call", description: "\"call\"" },
        peg$c38 = function(expr, args) {
              return new FuncallNode(expr, args);
            },
        peg$c39 = function(sym, args) {
              return new FuncallNode(new VariableNode(sym), args);
            },
        peg$c40 = "break",
        peg$c41 = { type: "literal", value: "break", description: "\"break\"" },
        peg$c42 = function() {
              return new BreakNode;
            },
        peg$c43 = "next",
        peg$c44 = { type: "literal", value: "next", description: "\"next\"" },
        peg$c45 = function() {
              return new NextNode;
            },
        peg$c46 = "return",
        peg$c47 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c48 = function(result) {
              return new ReturnNode(result);
            },
        peg$c49 = "--",
        peg$c50 = { type: "literal", value: "--", description: "\"--\"" },
        peg$c51 = /^[^\n]/,
        peg$c52 = { type: "class", value: "[^\\n]", description: "[^\\n]" },
        peg$c53 = function(text) {
              return new CommentNode(text);
            },
        peg$c54 = ",",
        peg$c55 = { type: "literal", value: ",", description: "\",\"" },
        peg$c56 = function(val) { return val; },
        peg$c57 = function(first, rest) {
              return [first].concat(rest);
            },
        peg$c58 = function(op, e) { return [op, e]; },
        peg$c59 = function(first, rest) {
              return buildLogicalOp(first, rest);
            },
        peg$c60 = "and",
        peg$c61 = { type: "literal", value: "and", description: "\"and\"" },
        peg$c62 = function() { return 'and'; },
        peg$c63 = "or",
        peg$c64 = { type: "literal", value: "or", description: "\"or\"" },
        peg$c65 = function() { return 'or';  },
        peg$c66 = "not",
        peg$c67 = { type: "literal", value: "not", description: "\"not\"" },
        peg$c68 = function(comp) {
              return new LogicalOpNode('not', null, comp);
            },
        peg$c69 = function(left, op, right) {
              return new BinaryOpNode(op, left, right);
            },
        peg$c70 = "(",
        peg$c71 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c72 = ")",
        peg$c73 = { type: "literal", value: ")", description: "\")\"" },
        peg$c74 = function(cond) {
              return cond;
            },
        peg$c75 = "!=",
        peg$c76 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c77 = "<=",
        peg$c78 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c79 = "<",
        peg$c80 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c81 = ">=",
        peg$c82 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c83 = ">",
        peg$c84 = { type: "literal", value: ">", description: "\">\"" },
        peg$c85 = function(first, rest) {
              return buildBinaryOp(first, rest);
            },
        peg$c86 = "+",
        peg$c87 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c88 = "-",
        peg$c89 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c90 = "*",
        peg$c91 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c92 = "/",
        peg$c93 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c94 = "%",
        peg$c95 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c96 = function(e, op) { return [op, e]; },
        peg$c97 = function(rest, last) {
              return buildBinaryOpRight(rest, last);
            },
        peg$c98 = "^",
        peg$c99 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c100 = function(op, num) {
              // handle +/- number in the parser
              return new LiteralNode(runtime.handle(num).unaryops[op](num));
            },
        peg$c101 = function(op, right) {
              return new UnaryOpNode(op, right);
            },
        peg$c102 = function(target, args) {
              return new FuncallNode(target, args);
            },
        peg$c103 = function(sym, dims) {
              if (!dims) {
                return new VariableNode(sym);
              } else {
                return buildIndex(new VariableNode(sym), dims);
              }
            },
        peg$c104 = function(dim) { return dim; },
        peg$c105 = "[",
        peg$c106 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c107 = "]",
        peg$c108 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c109 = function(v) {
              return v;
            },
        peg$c110 = ".",
        peg$c111 = { type: "literal", value: ".", description: "\".\"" },
        peg$c112 = function(sym) {
              return new LiteralNode(sym);
            },
        peg$c113 = function(lit) {
              return new LiteralNode(lit);
            },
        peg$c114 = function(val) {
              return val;
            },
        peg$c115 = "none",
        peg$c116 = { type: "literal", value: "none", description: "\"none\"" },
        peg$c117 = function() { return null; },
        peg$c118 = "true",
        peg$c119 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c120 = function() { return true; },
        peg$c121 = "false",
        peg$c122 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c123 = function() { return false; },
        peg$c124 = "infinity",
        peg$c125 = { type: "literal", value: "infinity", description: "\"infinity\"" },
        peg$c126 = function() { return Infinity; },
        peg$c127 = /^[eE]/,
        peg$c128 = { type: "class", value: "[eE]", description: "[eE]" },
        peg$c129 = /^[\-+]/,
        peg$c130 = { type: "class", value: "[\\-+]", description: "[\\-+]" },
        peg$c131 = function(num) {
              return parseFloat(num);
            },
        peg$c132 = /^[0-9]/,
        peg$c133 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c134 = "\"",
        peg$c135 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c136 = function(chars) { return chars.join(''); },
        peg$c137 = "\"\"",
        peg$c138 = { type: "literal", value: "\"\"", description: "\"\\\"\\\"\"" },
        peg$c139 = function() { return '"'; },
        peg$c140 = /^[^"]/,
        peg$c141 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c142 = void 0,
        peg$c143 = /^[a-z_]/i,
        peg$c144 = { type: "class", value: "[a-z_]i", description: "[a-z_]i" },
        peg$c145 = /^[a-z0-9_]/i,
        peg$c146 = { type: "class", value: "[a-z0-9_]i", description: "[a-z0-9_]i" },
        peg$c147 = /^[ \t]/,
        peg$c148 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c149 = /^[\n;]/,
        peg$c150 = { type: "class", value: "[\\n;]", description: "[\\n;]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseBlock();

      return s0;
    }

    function peg$parseBlock() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parse__();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseBlockElement();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseEOL();
          if (s5 !== peg$FAILED) {
            peg$reportedPos = s2;
            s3 = peg$c2(s4);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$c1;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c1;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$c1;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parse__();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseBlockElement();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseEOL();
            if (s5 !== peg$FAILED) {
              peg$reportedPos = s2;
              s3 = peg$c2(s4);
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$c1;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c1;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$c1;
        }
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseBlockElement() {
      var s0;

      s0 = peg$parseControl();
      if (s0 === peg$FAILED) {
        s0 = peg$parseStatement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseComment();
        }
      }

      return s0;
    }

    function peg$parseControl() {
      var s0;

      s0 = peg$parseIfElse();
      if (s0 === peg$FAILED) {
        s0 = peg$parseForIn();
        if (s0 === peg$FAILED) {
          s0 = peg$parseWhile();
          if (s0 === peg$FAILED) {
            s0 = peg$parseBegin();
          }
        }
      }

      return s0;
    }

    function peg$parseIfElse() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c4) {
          s2 = peg$c4;
          peg$currPos += 2;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseWB();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseValue();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse__();
                if (s6 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 4) === peg$c6) {
                    s7 = peg$c6;
                    peg$currPos += 4;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c7); }
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseWB();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parse__();
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parseStatement();
                        if (s10 !== peg$FAILED) {
                          s11 = peg$parse__();
                          if (s11 !== peg$FAILED) {
                            if (input.substr(peg$currPos, 4) === peg$c8) {
                              s12 = peg$c8;
                              peg$currPos += 4;
                            } else {
                              s12 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c9); }
                            }
                            if (s12 !== peg$FAILED) {
                              s13 = peg$parseWB();
                              if (s13 !== peg$FAILED) {
                                s14 = peg$parse__();
                                if (s14 !== peg$FAILED) {
                                  s15 = peg$parseStatement();
                                  if (s15 !== peg$FAILED) {
                                    peg$reportedPos = s0;
                                    s1 = peg$c10(s5, s10, s15);
                                    s0 = s1;
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$c1;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$c1;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$c1;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$c1;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$c1;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$c1;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c1;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c1;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse__();
        if (s1 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c4) {
            s2 = peg$c4;
            peg$currPos += 2;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parseWB();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse__();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseValue();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parse__();
                  if (s6 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 4) === peg$c6) {
                      s7 = peg$c6;
                      peg$currPos += 4;
                    } else {
                      s7 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c7); }
                    }
                    if (s7 !== peg$FAILED) {
                      s8 = peg$parseWB();
                      if (s8 !== peg$FAILED) {
                        s9 = peg$parse__();
                        if (s9 !== peg$FAILED) {
                          s10 = peg$parseStatement();
                          if (s10 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c11(s5, s10);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$c1;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$c1;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$c1;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c1;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parse__();
          if (s1 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c4) {
              s2 = peg$c4;
              peg$currPos += 2;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c5); }
            }
            if (s2 !== peg$FAILED) {
              s3 = peg$parseWB();
              if (s3 !== peg$FAILED) {
                s4 = peg$parse__();
                if (s4 !== peg$FAILED) {
                  s5 = peg$parseValue();
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parse__();
                    if (s6 !== peg$FAILED) {
                      if (input.substr(peg$currPos, 4) === peg$c6) {
                        s7 = peg$c6;
                        peg$currPos += 4;
                      } else {
                        s7 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c7); }
                      }
                      if (s7 !== peg$FAILED) {
                        s8 = peg$parseEOL();
                        if (s8 !== peg$FAILED) {
                          s9 = peg$parseBlock();
                          if (s9 !== peg$FAILED) {
                            s10 = peg$parse__();
                            if (s10 !== peg$FAILED) {
                              if (input.substr(peg$currPos, 4) === peg$c8) {
                                s11 = peg$c8;
